Common/src/main/java/org/example/error/NoSuchCommandException.java
package org.example.error;

import java.io.IOException;
/**
 * Класс исключения для несуществующей команды
 */
public class NoSuchCommandException extends IOException {
}
